[gd_scene load_steps=5 format=3 uid="uid://bdkiiqpixn2ld"]

[ext_resource type="Script" path="res://addons/first_person_controller/examples/debug/scripts/task_viewer_item.gd" id="1_j3tp5"]
[ext_resource type="Texture2D" uid="uid://ucaixm1mxkum" path="res://addons/first_person_controller/examples/debug/textures/bug.png" id="2_bsksp"]
[ext_resource type="Texture2D" uid="uid://of6kufjcgoko" path="res://addons/first_person_controller/examples/debug/textures/active.png" id="3_5rgft"]

[sub_resource type="LabelSettings" id="LabelSettings_3fell"]

[node name="TaskItem" type="HBoxContainer"]
offset_right = 480.0
offset_bottom = 34.0
size_flags_horizontal = 3
script = ExtResource("1_j3tp5")

[node name="TaskTypeIcon" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("2_bsksp")
expand_mode = 3

[node name="StatusIcon" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("3_5rgft")
expand_mode = 3

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
vertical_scroll_mode = 0

[node name="TaskDescrLabel" type="Label" parent="ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Fix something with a really long description to test the container scrolling"
label_settings = SubResource("LabelSettings_3fell")
